# crud_copilot

./: README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
backend/: .env  Dockerfile  app.py  config.py  requirements.txt
backend/models/: user.py
backend/routes/: contact_routes.py  user_routes.py
frontend/: Dockerfile  package-lock.json
frontend/src/: App.vue  main.ts  router.js  style.css
frontend/src/components/: ContactDetailsPage.vue  ContactForm.vue  ContactPage.vue  LandingPage.vue  UserList.vue
