[tool.poetry]
name = "crud-copilot"
version = "0.1.0"
description = ""
authors = ["Johhan Barba <johhan@sisu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.1.0"
flask-sqlalchemy = "^3.1.1"
flask-cors = "^5.0.0"
psycopg2-binary = "^2.9.10"
flask-migrate = "^4.1.0"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
